--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&family=Roboto:wght@500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
-    <title>AIR MAX</title>
+    <title>Air Max</title>
 </head>
+
 
 <body>
 
