alterações para mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <aside>
-        <img id="logo" src="/assets/logo-airmax.PNG" alt="">
+        <img id="logo" src="./assets/logo-airmax.PNG" alt="">
 
         <div class="links">
             <a href="">HOME</a>
@@ -39,20 +39,20 @@
             <button>ADD TO CAST</button>
 
             <div class="imgsInferiores">
-                <img onclick="troquei('/assets/airMax1.png')" class="lowerImages" src="/assets/airMax1.png" alt="">
-                <img onclick="troquei('/assets/airMax2.png')" class="lowerImages" src="/assets/airMax2.png" alt="">
-                <img onclick="troquei('/assets/airMax3.png')" class="lowerImages" src="/assets/airMax3.png" alt="">
+                <img src="./assets/airMax1.png" alt="" class="lowerImages" onclick="troquei('./assets/airMax1.png')" >
+                <img src="./assets/airMax2.png" alt="" class="lowerImages" onclick="troquei('./assets/airMax2.png')" >
+                <img  src="./assets/airMax3.png" alt="" class="lowerImages" onclick="troquei('./assets/airMax3.png')">
             </div>
         </section>
 
     </main>
 
 
-    <img  id="mainPhoto" src="/assets/airMax1.png" alt="">
+    <img  id="mainPhoto" src="./assets/airMax1.png" alt="">
 
 
 </body>
 
-<script src="/script.js"></script>
+<script src="./script.js"></script>
 
 </html>
