--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="">CONTACT</a>
         </div>
         
-        <img onclick="showMenu()" class="menu" src="/assets/menu.png" alt="button-menu">
+        <img src="./assets/menu.png" alt="button-menu" class="menu" onclick="showMenu()">
     </aside>
 
     <main>
