alterações em algumas partes da pagina

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <img id="logo" src="./assets/logo-airmax.PNG" alt="">
 
         <div class="links">
-            <a href="">HOME</a>
-            <a href="">COLLECTIONS</a>
-            <a href="">ABOUT</a>
-            <a href="">CONTACT</a>
+            <a href="#">HOME</a>
+            <a href="#">COLLECTIONS</a>
+            <a href="#">ABOUT</a>
+            <a href="#">CONTACT</a>
         </div>
         
         <img src="./assets/menu.png" alt="button-menu" class="menu" onclick="showMenu()">
