--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&family=Roboto:wght@500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>Air Max</title>
+    <title>Air - Max</title>
 </head>
 
 
